--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kalosoftware</groupId>
-    <artifactId>jersey-swagger</artifactId>
+    <artifactId>jersey-swagger-hibernate</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>jersey-swagger</name>
+    <name>jersey-swagger-hibernate</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -20,6 +20,7 @@
         <jersey.version>2.20</jersey.version>
         <swagger.version>2.0.2</swagger.version>
         <swagger-ui.version>3.17.0</swagger-ui.version>
+        <jackson.version>2.10.0</jackson.version>
     </properties>
     
     <dependencies>
@@ -44,7 +45,7 @@
         </dependency>
         <!-- end Jersey-->
         
-        <!--Jax-json-->
+        <!--json-->
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
@@ -56,7 +57,23 @@
             <artifactId>javax.json</artifactId>
             <version>1.1</version>
         </dependency>
-        <!-- end Jax-json -->
+                
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.29.1</version>
+        </dependency>
+                
+        <!-- end json -->
+        
+        <!--Java Validation--> 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.4.Final</version>
+        </dependency>
+        <!-- end Java Validation--> 
+        
         
         <!-- Swagger -->
         <dependency>
@@ -78,7 +95,14 @@
         </dependency>
         <!--End swagger-->
         
-        
+        <!-- Hibernate -->        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.10.Final</version>
+        </dependency>
+        <!-- end Hibernate -->
+              
         
     </dependencies>
 
